# email-todo-mcp

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt  test_mcp.py
docs/superpowers/plans/: 2026-03-27-email-todo-mcp.md
docs/superpowers/specs/: 2026-03-27-email-todo-mcp-design.md
src/: __init__.py  config.py  email_client.py  server.py  todo_extractor.py
tests/: test_config.py  test_email_client.py  test_server.py  test_todo_extractor.py
